Fixed the NeoPixle flickering

--- a/BabySleeper/data/style.css
+++ b/BabySleeper/data/style.css
@@ -85,25 +85,56 @@ h1 {
   padding: 10px;
 }
 
-
-
-
-/*
-html {
-  font-family: Helvetica;
-  display: inline-block;
-  margin: 0px auto;
-  text-align: center;
-}
-h1{
-  color: #0F3376;
-  padding: 2vh;
+.bluelight {
+  font-weight: 40;
+  font-size: 30px;
+  color: #a31aff;
 }
 
-*/
+.ledseting_text {
+  font-weight: 40;
+  font-size: 30px;
+  color: #a31a0b;
+}
+
+.slidecontainer {
+  width: 100%;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 25px;
+  background: #d3d390;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #4CAF65;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #4CAF65;
+  cursor: pointer;
+}
+
 .note {
   background-color: lightgrey;
-  width: 400px;
+  width: device-width;
   border-radius: 25px;
   border: 2px solid #73AD21;
   vertical-align: middle;
@@ -112,6 +143,36 @@ h1{
   padding: 20px;
   
 }
+.ledSetting{
+  background-color: lightgrey;
+  border-radius: 25px;
+  border: 2px solid #73AD21;
+  vertical-align: middle;
+  position: relative;
+  display: inline-block;
+  padding: 20px;
+}
+.ledSettingday{
+ background-color: lightskyblue;
+ width: 350px;
+}
+
+.ledSettingnight{
+ background-color: lightsteelblue;
+ width: 350px;
+}
+.wifi_cardentials{
+  background-color: lightgrey;
+  width: device-width;
+  border-radius: 25px;
+  border: 2px solid #73AD21;
+  vertical-align: middle;
+  position: relative;
+  display: inline-block;
+  padding: 20px;
+}
+
+
 p{
   padding: 16px 40px;
   text-align: left
@@ -126,13 +187,20 @@ P.a {
   border: none;
   border-radius: 4px;
   color: white;
-  padding: 16px 40px;
+  padding: 16px 20px;
   text-decoration: none;
-  font-size: 30px;
+  font-size: 15px;
   margin: 2px;
   cursor: pointer;
 }
 .button2 {
   background-color: #f44336;
 }
+.button3 {
+  background-color: #cc00ff;
+}
 
+form {
+  display: inline-block;
+  margin-top: 0em;
+}
